[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/characters_packed.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 144, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 168, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.5, 4 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 3 )
animation = "Walking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -8 )
shape = SubResource( 4 )

[node name="EdgeCheckR" type="RayCast2D" parent="."]
position = Vector2( 5, -1 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="EdgeCheckL" type="RayCast2D" parent="."]
position = Vector2( -6, -1 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.5, -14 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
